# romea-core-path-following

./: AUTHORS  CMakeLists.txt  README.md  package.xml
cmake/: romea_core_path_followingConfig.cmake.in
include/romea_core_path_following/: PathFollowing.hpp  PathFollowingFSM.hpp  PathFollowingLogs.hpp  PathFollowingPlatoon.hpp  PathFollowingSetPoint.hpp  PathFollowingTraits.hpp  PathFollowingUtils.hpp  fsm.hpp  logs.hpp  path_following.hpp  setpoint.hpp  traits.hpp  utils.hpp
src/: PathFollowing.cpp  PathFollowingFSM.cpp  PathFollowingLogs.cpp  PathFollowingPlatoon.cpp  PathFollowingSetPoint.cpp  PathFollowingUtils.cpp  fsm.cpp  logs.cpp  setpoint.cpp  utils.cpp
src/command/: PathSectionFollowingBase.cpp  PathSectionFollowingClassic.cpp  PathSectionFollowingLongitudinalControl.cpp  PathSectionFollowingPredictive.cpp
src/external_control/: platoon.cpp
src/lateral_control/: LateralControlBackStepping.cpp  LateralControlClassic.cpp  LateralControlPredictive.cpp  PathFollowingLateralControlClassicOneAxleSteering.cpp  PathFollowingLateralControlClassicTwoAxleSteering.cpp  PathFollowingLateralControlPredictiveOneAxleSteering.cpp  PathFollowingLateralControlPredictiveTwoAxleSteering.cpp  back_stepping.cpp  classic.cpp  desbos_generic.cpp  desbos_generic_predictive.cpp  front_rear_decoupled.cpp  predictive.cpp  skid_backstepping.cpp  skid_sliding.cpp
src/longitudinal_control/: LongitudinalControlClassic.cpp  PathFollowingLongitudinalControlOneAxleSteering.cpp  PathFollowingLongitudinalControlSkidSteering.cpp  (+5 more)
test/: CMakeLists.txt  test_fsm.cpp  test_set_point.cpp
(+72 files in other folders)
